--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="col-md-6">
             <div class="eight_block">
               <div class="eight_icon">
-                <img src="src/icons/8_why/1.png" alt="1" class=>
+                <img src="icons/8_why/1.png" alt="1" class=>
               </div>
               <div class="eight_descr">
                 <div class="eight_title">
@@ -100,7 +100,7 @@
           <div class="col-md-6">
                     <div class="eight_block">
                         <div class="eight_icon">
-                            <img src="src/icons/8_why/2.png" alt="reason">
+                            <img src="icons/8_why/2.png" alt="reason">
                         </div>
                         <div class="eight_descr">
                             <div class="eight_title">Комиссия 8% + БОНУСЫ</div>
@@ -113,7 +113,7 @@
                 <div class="col-md-6">
                     <div class="eight_block">
                         <div class="eight_icon">
-                            <img src="src/icons/8_why/3.png" alt="reason">
+                            <img src="icons/8_why/3.png" alt="reason">
                         </div>
                         <div class="eight_descr">
                             <div class="eight_title">Высокий доход с гарантированными выплатами</div>
@@ -126,7 +126,7 @@
                 <div class="col-md-6">
                     <div class="eight_block">
                         <div class="eight_icon">
-                            <img src="src/icons/8_why/4.png" alt="reason">
+                            <img src="icons/8_why/4.png" alt="reason">
                         </div>
                         <div class="eight_descr">
                             <div class="eight_title">Работа в удобное время, никаких графиков</div>
@@ -139,7 +139,7 @@
                 <div class="col-md-6">
                     <div class="eight_block">
                         <div class="eight_icon">
-                            <img src="src/icons/8_why/5.png" alt="reason">
+                            <img src="icons/8_why/5.png" alt="reason">
                         </div>
                         <div class="eight_descr">
                             <div class="eight_title">Комфортное, прозрачное и простое подключение</div>
@@ -152,7 +152,7 @@
                 <div class="col-md-6">
                     <div class="eight_block">
                         <div class="eight_icon">
-                            <img src="src/icons/8_why/6.png" alt="reason">
+                            <img src="icons/8_why/6.png" alt="reason">
                         </div>
                         <div class="eight_descr">
                             <div class="eight_title">Всегда большое количество заказов</div>
@@ -165,7 +165,7 @@
                 <div class="col-md-6">
                     <div class="eight_block">
                         <div class="eight_icon">
-                            <img src="src/icons/8_why/7.png" alt="reason">
+                            <img src="icons/8_why/7.png" alt="reason">
                         </div>
                         <div class="eight_descr">
                             <div class="eight_title">Круглосуточная поддержка</div>
@@ -178,7 +178,7 @@
                 <div class="col-md-6">
                     <div class="eight_block">
                         <div class="eight_icon">
-                            <img src="src/icons/8_why/8.png" alt="reason">
+                            <img src="icons/8_why/8.png" alt="reason">
                         </div>
                         <div class="eight_descr">
                             <div class="eight_title">Без шашечек и наклеек</div>
