--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         <div class="label_white">возможности</div>
         <div class="title_white">Выбор - отличная штука!</div>
         <div class="subtitle_white">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
-        <div class="choice_car"><img src="../src/img/choice/car.png" alt="car" class="choice_car_img"></div>
+        <div class="choice_car"><img src="img/choice/car.png" alt="car" class="choice_car_img"></div>
         <div class="choice_text">Машины на каждый день.<br>Лучше, быстрее и дешевле, чем такси</div>
       </div>
     </section>
@@ -363,13 +363,13 @@
     <div>
       <div class="footer_mobile">
           <a href="#">
-            <img src="../src/icons/footer/appstore.png" alt="App Store">
+            <img src="icons/footer/appstore.png" alt="App Store">
           </a>
           <a href="#">
-            <img src="../src/icons/footer/googleplay.png" alt="Google play">
+            <img src="icons/footer/googleplay.png" alt="Google play">
           </a>
           <a href="#">
-            <img src="../src/icons/footer/windowsstore.png" alt="Windows store">
+            <img src="icons/footer/windowsstore.png" alt="Windows store">
           </a>
       </div>
     </div>
